# engineworks

./: CMakeLists.txt  README.md
include/: engineworks.h
include/ew/: collidable.h  collidableworld.h  collidephase.h  controlcontext.h  controllable.h  controllableworld.h  controlphase.h  customphase.h  customphasehandler.h  engine.h  entity.h  interceptor.h  interfacemap.h  managed.h  managephase.h  phase.h  rectblockcollidableactor.h  rectblockcollidableblock.h  rectblockcollidephase.h  rectcollidable.h  rectcollidephase.h  renderable.h  renderableworld.h  renderphase.h  rolemanager.h  state.h  tilecollidable.h  tilecollidableworld.h  tilecollidephase.h  timer.h  updatable.h  updatableworld.h  updatephase.h  world.h
include/ew/integration/: glfwcontrolcontext.h  glfwrendercontext.h  glfwtimecontext.h  glhckglfwrendercontext.h  sdlcontrolcontext.h  sdlrendercontext.h  sdltimecontext.h
src/: collidableworld.cpp  collidephase.cpp  controllableworld.cpp  controlphase.cpp  engine.cpp  renderableworld.cpp  renderphase.cpp  state.cpp  tilecollidableworld.cpp  tilecollidephase.cpp  timer.cpp  uniqueid.cpp  updatableworld.cpp  updatephase.cpp  world.cpp
src/core/: engine.cpp  interceptor.cpp  phase.cpp  state.cpp
src/extra/: customphase.cpp  managed.cpp  managephase.cpp  rectblockcollidableactor.cpp  rectblockcollidephase.cpp  rectcollidephase.cpp  renderphase.cpp  rolemanager.cpp  updatephase.cpp
test/: CMakeLists.txt  entities.cpp  managed.cpp  simple.cpp
